# Aegis-Tactility

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.md  device.py
Buildscripts/: idf55_runner.py  logo.cmake  properties.cmake
Buildscripts/font-subset/: README.md  generate_runtime_cjk_charset_common_sc.py  runtime-cjk-charset-common-sc.txt  subset_runtime_cjk_font.py
Data/system/app/AppSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Chat/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/ChatProfile/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Contacts/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Development/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Display/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Files/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/GpsSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/KeyboardSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/Launcher/i18n/: fr-FR.i18n  zh-CN.i18n
Data/system/app/LocaleSettings/i18n/: en-GB.i18n  en-US.i18n  fr-FR.i18n  nl-BE.i18n  nl-NL.i18n  zh-CN.i18n
Data/system/app/Power/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/ReticulumSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/TimeDateSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/TrackballSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/UsbSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/WifiApSettings/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/WifiConnect/i18n/: en-US.i18n  zh-CN.i18n
Data/system/app/WifiManage/i18n/: en-US.i18n  zh-CN.i18n
Data/system/i18n/core/: zh-CN.i18n
Devices/lilygo-tdeck/: device.properties
Devices/lilygo-tdeck/Source/: Configuration.cpp
Devices/lilygo-tdeck/Source/devices/: TdeckSx1262LoRaDevice.cpp  TdeckSx1262LoRaDevice.h
Devices/m5stack-tab5/: device.properties
Documentation/: aegis-compliance.md  aegis-differences.md  get-started-lilygo-tdeck.md  releasing.md  reticulum-service-m1.md  tdeck-lora-backend-plan.md
Firmware/: CMakeLists.txt  Kconfig
Modules/hal-device-module/include/tactility/drivers/: hal_device.h
Modules/hal-device-module/include/tactility/hal/: Device.h
Modules/hal-device-module/source/drivers/: hal_device.cpp
Modules/lvgl-module/include/tactility/: lvgl_fonts.h
Modules/lvgl-module/source/: lvgl_fonts.c
Releases/0.0.1-alpha/lilygo-tdeck/: README.md  SHA256SUMS.txt  flash_args
Tactility/: CMakeLists.txt
Tactility/Include/Tactility/app/: AppManifest.h  LocalizedAppName.h
Tactility/Include/Tactility/hal/radio/: LoRaDevice.h
Tactility/Include/Tactility/service/lxmf/: Events.h  Lxmf.h  Types.h
Tactility/Include/Tactility/service/reticulum/: Events.h  Interface.h  Reticulum.h  Types.h
Tactility/Include/Tactility/settings/: ChatSettings.h  Language.h  ReticulumSettings.h
Tactility/Private/Tactility/app/applist/: TextResources.h
Tactility/Private/Tactility/app/appsettings/: TextResources.h
Tactility/Private/Tactility/app/chat/: ChatAppPrivate.h  ChatProtocol.h  ChatSettings.h  ChatState.h  ChatView.h  Localization.h  TextResources.h
Tactility/Private/Tactility/app/chatprofile/: TextResources.h
Tactility/Private/Tactility/app/contacts/: TextResources.h
Tactility/Private/Tactility/app/development/: TextResources.h
Tactility/Private/Tactility/app/display/: TextResources.h
Tactility/Private/Tactility/app/files/: TextResources.h
Tactility/Private/Tactility/app/gpssettings/: TextResources.h
Tactility/Private/Tactility/app/keyboard/: TextResources.h
Tactility/Private/Tactility/app/localesettings/: TextResources.h
Tactility/Private/Tactility/app/power/: TextResources.h
Tactility/Private/Tactility/app/reticulumsettings/: TextResources.h
Tactility/Private/Tactility/app/settings/: TextResources.h
Tactility/Private/Tactility/app/timedatesettings/: TextResources.h
Tactility/Private/Tactility/app/trackball/: TextResources.h
Tactility/Source/: PartitionsEsp.cpp  Tactility.cpp
Tactility/Source/app/: LocalizedAppName.cpp
Tactility/Source/app/applist/: AppList.cpp
Tactility/Source/app/appsettings/: AppSettings.cpp
Tactility/Source/app/chat/: ChatApp.cpp  ChatProtocol.cpp  ChatSettings.cpp  ChatState.cpp  ChatView.cpp  Localization.cpp
Tactility/Source/app/chatprofile/: ChatProfile.cpp
Tactility/Source/app/contacts/: ContactsApp.cpp
Tactility/Source/app/development/: Development.cpp
Tactility/Source/app/display/: Display.cpp
Tactility/Source/app/files/: FilesApp.cpp  View.cpp
Tactility/Source/app/gpssettings/: GpsSettings.cpp
Tactility/Source/app/keyboard/: KeyboardSettings.cpp
Tactility/Source/app/launcher/: Launcher.cpp
Tactility/Source/app/localesettings/: LocaleSettings.cpp
Tactility/Source/app/power/: Power.cpp
Tactility/Source/app/reticulumsettings/: ReticulumSettings.cpp
Tactility/Source/app/settings/: Settings.cpp
Tactility/Source/app/systeminfo/: SystemInfo.cpp
Tactility/Source/app/timedatesettings/: TimeDateSettings.cpp
Tactility/Source/app/trackball/: TrackballSettings.cpp
Tactility/Source/app/usbsettings/: UsbSettings.cpp
Tactility/Source/app/wifiapsettings/: WifiApSettings.cpp
Tactility/Source/app/wificonnect/: View.cpp  WifiConnect.cpp
Tactility/Source/app/wifimanage/: View.cpp  WifiManage.cpp
Tactility/Source/hal/radio/: LoRaDevice.cpp
Tactility/Source/i18n/: TextResources.cpp
Tactility/Source/lvgl/: Lvgl.cpp  RuntimeTextFonts.cpp  RuntimeTextFonts.h  Toolbar.cpp
Tactility/Source/service/: ServiceRegistration.cpp
Tactility/Source/service/displayidle/: MatrixRainScreensaver.cpp
Tactility/Source/service/lxmf/: Lxmf.cpp  LxmfService.cpp  Types.cpp
Tactility/Source/service/reticulum/: Crypto.cpp  DestinationRegistry.cpp  IdentityStore.cpp  InterfaceManager.cpp  LinkManager.cpp  MessagePack.cpp  PacketCodec.cpp  ResourceManager.cpp  Reticulum.cpp  ReticulumService.cpp  TransportCore.cpp  Types.cpp
Tactility/Source/settings/: ChatSettings.cpp  Language.cpp  ReticulumSettings.cpp
Translations/: README.md  Translations.ods  WifiConnect.csv  generate-all.py  generate.py
(+24 files in other folders)
